Update WinDump project to take file additions and removals into account

--- a/win32/prj/WinDump.vcxproj
+++ b/win32/prj/WinDump.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="..\..\print-802_11.c" />
     <ClCompile Include="..\..\print-802_15_4.c" />
     <ClCompile Include="..\..\print-ah.c" />
+    <ClCompile Include="..\..\print-ahcp.c" />
     <ClCompile Include="..\..\print-aodv.c" />
     <ClCompile Include="..\..\print-ap1394.c" />
     <ClCompile Include="..\..\print-arcnet.c" />
@@ -241,6 +242,7 @@
     <ClCompile Include="..\..\print-llc.c" />
     <ClCompile Include="..\..\print-lldp.c" />
     <ClCompile Include="..\..\print-lmp.c" />
+    <ClCompile Include="..\..\print-loopback.c" />
     <ClCompile Include="..\..\print-lspping.c" />
     <ClCompile Include="..\..\print-lwapp.c" />
     <ClCompile Include="..\..\print-lwres.c" />
@@ -251,7 +253,6 @@
     <ClCompile Include="..\..\print-mptcp.c" />
     <ClCompile Include="..\..\print-msdp.c" />
     <ClCompile Include="..\..\print-msnlb.c" />
-    <ClCompile Include="..\..\print-netbios.c" />
     <ClCompile Include="..\..\print-nflog.c" />
     <ClCompile Include="..\..\print-nfs.c" />
     <ClCompile Include="..\..\print-ntp.c" />
@@ -264,6 +265,7 @@
     <ClCompile Include="..\..\print-otv.c" />
     <ClCompile Include="..\..\print-pgm.c" />
     <ClCompile Include="..\..\print-pim.c" />
+    <ClCompile Include="..\..\print-pktap.c" />
     <ClCompile Include="..\..\print-ppi.c" />
     <ClCompile Include="..\..\print-ppp.c" />
     <ClCompile Include="..\..\print-pppoe.c" />
@@ -315,81 +317,47 @@
     <ClCompile Include="..\Src\getopt.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\acconfig.h" />
     <ClInclude Include="..\..\addrtoname.h" />
     <ClInclude Include="..\..\ah.h" />
-    <ClInclude Include="..\..\aodv.h" />
     <ClInclude Include="..\..\appletalk.h" />
-    <ClInclude Include="..\..\arcnet.h" />
     <ClInclude Include="..\..\atm.h" />
     <ClInclude Include="..\..\atmuni31.h" />
-    <ClInclude Include="..\..\bgp.h" />
     <ClInclude Include="..\..\bootp.h" />
     <ClInclude Include="..\..\chdlc.h" />
     <ClInclude Include="..\..\cpack.h" />
-    <ClInclude Include="..\..\dccp.h" />
     <ClInclude Include="..\..\decnet.h" />
-    <ClInclude Include="..\..\decode_prefix.h" />
-    <ClInclude Include="..\..\enc.h" />
-    <ClInclude Include="..\..\esp.h" />
     <ClInclude Include="..\..\ether.h" />
     <ClInclude Include="..\..\ethertype.h" />
     <ClInclude Include="..\..\extract.h" />
-    <ClInclude Include="..\..\fddi.h" />
     <ClInclude Include="..\..\gmpls.h" />
     <ClInclude Include="..\..\gmt2local.h" />
-    <ClInclude Include="..\..\icmp6.h" />
-    <ClInclude Include="..\..\ieee802_11.h" />
-    <ClInclude Include="..\..\ieee802_11_radio.h" />
-    <ClInclude Include="..\..\igrp.h" />
     <ClInclude Include="..\..\interface.h" />
     <ClInclude Include="..\..\ip.h" />
     <ClInclude Include="..\..\ip6.h" />
-    <ClInclude Include="..\..\ipfc.h" />
-    <ClInclude Include="..\..\ipnet.h" />
     <ClInclude Include="..\..\ipproto.h" />
-    <ClInclude Include="..\..\ipsec_doi.h" />
-    <ClInclude Include="..\..\ipx.h" />
-    <ClInclude Include="..\..\isakmp.h" />
-    <ClInclude Include="..\..\l2tp.h" />
     <ClInclude Include="..\..\l2vpn.h" />
-    <ClInclude Include="..\..\lane.h" />
     <ClInclude Include="..\..\llc.h" />
     <ClInclude Include="..\..\machdep.h" />
     <ClInclude Include="..\..\mib.h" />
     <ClInclude Include="..\..\mpls.h" />
     <ClInclude Include="..\..\nameser.h" />
-    <ClInclude Include="..\..\netbios.h" />
     <ClInclude Include="..\..\netdissect.h" />
     <ClInclude Include="..\..\nfs.h" />
     <ClInclude Include="..\..\nfsfh.h" />
     <ClInclude Include="..\..\nlpid.h" />
-    <ClInclude Include="..\..\ntp.h" />
-    <ClInclude Include="..\..\oakley.h" />
     <ClInclude Include="..\..\openflow.h" />
     <ClInclude Include="..\..\ospf.h" />
-    <ClInclude Include="..\..\ospf6.h" />
     <ClInclude Include="..\..\oui.h" />
     <ClInclude Include="..\..\pcap-missing.h" />
-    <ClInclude Include="..\..\pf.h" />
-    <ClInclude Include="..\..\pmap_prot.h" />
     <ClInclude Include="..\..\ppp.h" />
-    <ClInclude Include="..\..\route6d.h" />
     <ClInclude Include="..\..\rpc_auth.h" />
     <ClInclude Include="..\..\rpc_msg.h" />
-    <ClInclude Include="..\..\rx.h" />
-    <ClInclude Include="..\..\sctpConstants.h" />
-    <ClInclude Include="..\..\sctpHeader.h" />
+    <ClInclude Include="..\..\rpl.h" />
     <ClInclude Include="..\..\setsignal.h" />
     <ClInclude Include="..\..\slcompress.h" />
-    <ClInclude Include="..\..\slip.h" />
-    <ClInclude Include="..\..\sll.h" />
     <ClInclude Include="..\..\smb.h" />
     <ClInclude Include="..\..\tcp.h" />
     <ClInclude Include="..\..\tcpdump-stdinc.h" />
-    <ClInclude Include="..\..\telnet.h" />
-    <ClInclude Include="..\..\timed.h" />
-    <ClInclude Include="..\..\token.h" />
     <ClInclude Include="..\..\udp.h" />
   </ItemGroup>
   <ItemGroup>
